@@ -2,33 +2,27 @@ package com.yogesh.learningportal.service;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
 import org.springframework.stereotype.Service;
 
 import com.yogesh.learningportal.dto.CourseResponseDto;
+import com.yogesh.learningportal.dto.UserResponseDto;
 import com.yogesh.learningportal.entity.Course;
+import com.yogesh.learningportal.entity.User;
 import com.yogesh.learningportal.mapper.CourseMapper;
-import com.yogesh.learningportal.repository.CategoryRepository;
+import com.yogesh.learningportal.mapper.UserMapper;
 import com.yogesh.learningportal.repository.CourseRepository;
-import com.yogesh.learningportal.repository.UserRepository;
 
 import lombok.AllArgsConstructor;
 
+@AllArgsConstructor
 @Service
 public class CourseService {
 
-	private static final Logger logger=LoggerFactory.getLogger(CourseService.class);
-	private final CourseRepository courseRepository;
-    private final CourseMapper courseMapper;
+	private CourseRepository courseRepository;
+	private CourseMapper courseMapper;
+	private UserMapper userMapper;
 
-    public CourseService(CourseRepository courseRepository, CourseMapper courseMapper) {
-        this.courseRepository = courseRepository;
-        this.courseMapper = courseMapper;
-    }
-	
 	public List<Course> getAllCourses() {
 		return courseRepository.findAll();
 	}
@@ -40,14 +34,20 @@ public class CourseService {
 	public Course addCourse(Course course) {
 		return courseRepository.save(course);
 	}
-	public List<CourseResponseDto> getCoursesByAuthor(long authorId) {
-        List<Course> courses = courseRepository.getCoursesByAuthor(authorId);
-        return courses.stream().map(courseMapper::convertToResponseDto).collect(Collectors.toList());
-    }
 
-    public List<CourseResponseDto> getCoursesByCategory(long categoryId) {
-        List<Course> courses = courseRepository.findByCategoryId(categoryId);
-        return courses.stream().map(courseMapper::convertToResponseDto).collect(Collectors.toList());
-    }
+	public List<CourseResponseDto> getCoursesByAuthor(Long authorId) {
+		List<Course> courses = courseRepository.getCoursesByAuthor(authorId);
+		return courses.stream().map(courseMapper::convertToResponseDto).toList();
+	}
+
+	public List<CourseResponseDto> getCoursesByCategory(Long categoryId) {
+		List<Course> courses = courseRepository.findByCategoryId(categoryId);
+		return courses.stream().map(courseMapper::convertToResponseDto).toList();
+	}
+
+	public List<UserResponseDto> getEnrolledUsers(Long courseId) {
+		List<User> enrolledUsers = courseRepository.getEnrolledUsers(courseId);
+		return enrolledUsers.stream().map(userMapper::convertToDto).toList();
+	}
 
 }
